# ios-simulator-skill

./: .gitignore  .pre-commit-config.yaml  CHANGELOG_ERROR_CAPTURE_FIX.md  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: lint.yml  release.yml
examples/: login_flow.py
ios-simulator-skill/: SKILL.md  reference.md
ios-simulator-skill/.claude-plugin/: plugin.json
ios-simulator-skill/scripts/: build_and_test.py  debug_failing_test.py  model_inspector.py  wait_for.py
ios-simulator-skill/scripts/common/: device_utils.py  errors.py
ios-simulator-skill/skills/ios-simulator-skill/: SKILL.md
ios-simulator-skill/skills/ios-simulator-skill/scripts/: app_launcher.py  appearance.py  container.py  hang_watcher.py  localization_audit.py  location.py  navigator.py  screen_mapper.py  simctl_boot.py  simctl_erase.py
ios-simulator-skill/skills/ios-simulator-skill/scripts/common/: hang_pipeline.py  hang_sessions.py
scripts/: accessibility_audit.py  app_launcher.py  app_state_capture.py  build_and_test.py  gesture.py  keyboard.py  log_monitor.py  navigator.py  screen_mapper.py  test_recorder.py  visual_diff.py
scripts/xcode/: __init__.py  builder.py  cache.py  config.py  reporter.py  xcresult.py
skill/: CLAUDE.md  SKILL.md
skill/scripts/: accessibility_audit.py  app_launcher.py  app_state_capture.py  clipboard.py  gesture.py  keyboard.py  navigator.py  privacy_manager.py  push_notification.py  screen_mapper.py  sim_list.py  simctl_boot.py  simctl_erase.py  simulator_selector.py  status_bar.py  test_recorder.py
skill/scripts/common/: __init__.py  cache_utils.py  device_utils.py  idb_utils.py  screenshot_utils.py
skill/scripts/xcode/: config.py  xcresult.py
tests/: test_auto_sample.py  test_diff.py  test_hang_pipeline.py  test_hang_sessions.py  test_token_budgets.py  test_worker_loop.py
tests/fixtures/: sample_session.py
